# ToDo-app

./: .gitignore  README.md  docker-compose.yaml  todo.code-workspace
backend/: .dockerignore  Dockerfile  Scope.docx  api.py  database.py  main.py  pyproject.toml
backend/database/: todo.db
backend/todo_ai/: AI_model_exp.ipynb  llm.py  llm_router.py
backend/todo_db/: crud.py  crud_router.py  database.py  models.py  validation.py
frontend/: Dockerfile  cheat-cheat.txt  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.js  App.jsx
frontend/src/components/: Modal.jsx  TaskModal.js  TaskModal.jsx  todoform.js  todoform.jsx  todolist.js
frontend/src/services/: api.js  api.jsx
