[project]
name = "todolist"
version = "1.0.0"
description = ""
authors = [
    {name = "jdmunoz"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
