[project]
name = "todolist"
version = "1.0.0"
description = ""
authors = [
    {name = "jdmunoz"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index-core (>=0.12.46,<0.13.0)",
    "llama-index-llms-openai (>=0.4.7,<0.5.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
