[project]
name = "todolist"
version = "1.0.0"
description = ""
authors = [
    {name = "jdmunoz"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "llama-index-core (>=0.12.46,<0.13.0)",
    "llama-index-llms-openai (>=0.4.7,<0.5.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "llama-index-embeddings-openai (>=0.3.1,<0.4.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "bleach (>=6.2.0,<7.0.0)",
    "google-genai (>=1.25.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
